--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<div id="wrapper">
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -42,3 +43,4 @@
     -->
   </body>
 </html>
+</div>
